Fixed scrollbar showing on Windows for math formulas

--- a/src/assets/stylesheets/main/extensions/pymdownx/_arithmatex.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_arithmatex.scss
@@ -29,7 +29,7 @@
 
   // Scroll math block on overflow
   div.arithmatex {
-    overflow-x: scroll;
+    overflow: auto;
 
     // [mobile -]: Stretch to whole width
     @include break-to-device(mobile) {
